force-app/main/default/objects/ucinn_ascendv2__Address__c/ucinn_ascendv2__Address__c.object-meta.xml
<CustomObject>
    <description>The addresses of the constituent or organization.</description>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>