force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/Address_Duplicate_Hash__c.field-meta.xml
<CustomField>
    <fullName>Address_Duplicate_Hash__c</fullName>
    <label>Address Duplicate Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>