force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/Address_Line_5__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_5__c</fullName>
    <description>For ISUF use</description>
    <label>Address Line 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>