force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <formula>TIMEVALUE( IF(  dst__c = &quot;true&quot;, NOW() + ( UTC_Offset__c /24), NOW() + ( UTC_Offset__c /24) - (1/24)))</formula>
    <label>Current Time</label>
    <type>Time</type>
</CustomField>