force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/dst__c.field-meta.xml
<CustomField>
    <fullName>dst__c</fullName>
    <label>dst</label>
    <length>5</length>
    <type>Text</type>
</CustomField>