force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/isuf_Portal_Country__c.field-meta.xml
<CustomField>
    <fullName>isuf_Portal_Country__c</fullName>
    <label>Portal Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_custom</valueSetName>
    </valueSet>
</CustomField>