force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/Postal_Length__c.field-meta.xml
<CustomField>
    <fullName>Postal_Length__c</fullName>
    <description>Temp field for counting postal code length to run adhoc smarty streets job, no user access</description>
    <formula>LEN( ucinn_ascendv2__Postal_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>