force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>