force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>