force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Address_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Name_Auto_Number__c</fullName>
    <displayFormat>ADDR-{0000000}</displayFormat>
    <label>Address Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>