force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Address_Precision__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Precision__c</fullName>
    <description>Locality — Address is only verified down to the locality (i.e., city).
Thoroughfare — Address is only verified down to the thoroughfare (i.e., street).
Premise — Address is verified down to the premise (i.e., building).
DeliveryPoint — Address is verified down to the delivery point (i.e., mailbox or subbuilding).</description>
    <inlineHelpText>Locality — Address is only verified down to the locality (i.e., city).
Thoroughfare — Address is only verified down to the thoroughfare (i.e., street).
Premise — Address is verified down to the premise (i.e., building).
DeliveryPoint — Address is verified down to the delivery point (i.e., mailbox or subbuilding).</inlineHelpText>
    <label>Address Precision</label>
    <length>24</length>
    <type>Text</type>
</CustomField>