force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Address_Verification_API_Request__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Address_Verification_API_Request__c</fullName>
    <label>Address Verification API Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>