force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Congressional_District__c</fullName>
    <description>The congressional district to which the address belongs. Output will be two digits from 01 - 53 or &quot;AL.&quot; &quot;AL&quot; means that the entire state (or territory) is covered by a single congressional district. These include Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, Wyoming, Washington DC, Virgin Islands, and other territories.</description>
    <inlineHelpText>The congressional district to which the address belongs. Output will be two digits from 01 - 53 or &quot;AL.&quot; &quot;AL&quot; means that the entire state (or territory) is covered by a single congressional district. These include Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, Wyoming, Washington DC, Virgin Islands, and other territories.</inlineHelpText>
    <label>Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>