force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Country_Integration_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Country_Integration_Value__c</fullName>
    <description>Stores the country Integration value from the country state picklist</description>
    <inlineHelpText>Stores the country Integration value from the country state picklist</inlineHelpText>
    <label>Country Integration Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>