force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>