force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__County__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>