force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Do_Not_Override__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Not_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Override</label>
    <type>Checkbox</type>
</CustomField>