force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__DPV_Match_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DPV_Match_Code__c</fullName>
    <description>N — Not confirmed; address is not present in the USPS data.
S — Confirmed by ignoring secondary info; the main address is present in the USPS data, but the submitted secondary information (apartment, suite, etc.) was not recognized.
(e.g., 62 Ea Darden Dr Apt 298 Anniston, AL)
D — Confirmed but missing secondary info; the main address is present in the USPS data, but it is missing secondary information (apartment, suite, etc.).
(e.g., 122 Mast Rd Lee, NH)
[blank or null] — The address is not present in the USPS database.</description>
    <inlineHelpText>N — Not confirmed; address is not present in the USPS data.
S — Confirmed by ignoring secondary info; the main address is present in the USPS data, but the submitted secondary information (apartment, suite, etc.) was not recognized.
(e.g., 62 Ea Darden Dr Apt 298 Anniston, AL)
D — Confirmed but missing secondary info; the main address is present in the USPS data, but it is missing secondary information (apartment, suite, etc.).
(e.g., 122 Mast Rd Lee, NH)
[blank or null] — The address is not present.</inlineHelpText>
    <label>DPV Match Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>