force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Is_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Confirmed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Confirmed</label>
    <type>Checkbox</type>
</CustomField>