force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verified Address</description>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>