force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Location__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Location__c</fullName>
    <label>Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>