force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>