force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Presidential_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Address_Line_2__c</fullName>
    <label>Presidential Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>