force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Presidential_City__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_City__c</fullName>
    <description>Presidential version of the City</description>
    <label>Presidential City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>