force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Presidential_Country__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Country__c</fullName>
    <description>Presidential version of the Country</description>
    <label>Presidential Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>