force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Presidential_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Postal_Code__c</fullName>
    <description>Presidential version of the Zip</description>
    <label>Presidential Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>