force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Presidential_State__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_State__c</fullName>
    <description>Presidential version of the State</description>
    <label>Presidential State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>