force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <description>Used to determine the Department or Interface that created/updated the record</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Of America</fullName>
            </value>
            <value>
                <fullName>Google Place API</fullName>
            </value>
            <value>
                <fullName>Online Donation</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>ISU Foundation</fullName>
            </value>
            <value>
                <fullName>Research Strategies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>