force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__State_Integration_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__State_Integration_Value__c</fullName>
    <description>Stores the State integration value from the country and state picklist</description>
    <inlineHelpText>Stores the State integration value from the country and state picklist</inlineHelpText>
    <label>State Integration Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>