force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__State_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__State_ISO_Code__c</fullName>
    <label>State ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>