force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Verification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Verification_Date_Time__c</fullName>
    <description>Last date/time address was verified.</description>
    <inlineHelpText>Last date/time address was verified.</inlineHelpText>
    <label>Verification Date / Time</label>
    <type>DateTime</type>
</CustomField>