force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Verification_Source__c</fullName>
    <label>Verification Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>