force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/ucinn_ascendv2__Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Verification_Status__c</fullName>
    <description>Ambiguous — Multiple matching addresses found. Each candidate address will have its own precision level. A common &quot;ambiguous&quot; scenario is that the output will contain two versions of the same address — one with a company name and one without.
Verified — The address was verified, at the indicated precision level. NOTE: A verification_status of &apos;Verified&apos; does not necessarily indicate that the address is valid or deliverable. For the address to be valid, its address precision must be &apos;Premise&apos; or &apos;DeliveryPoint.&apos;</description>
    <inlineHelpText>Ambiguous — Multiple matching addresses found. Each candidate address will have its own precision level. A common &quot;ambiguous&quot; scenario is that the output will contain two versions of the same address — one with a company name and one without.
Verified — The address was verified, at the indicated precision level. NOTE: A verification_status of &apos;Verified&apos; does not necessarily indicate the address is valid or deliverable. For the address to be valid, address precision must be &apos;Premise&apos; or &apos;DeliveryPoint.&apos;</inlineHelpText>
    <label>Verification Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>