force-app/main/default/objects/ucinn_ascendv2__Address__c/fields/UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>UTC_Offset__c</fullName>
    <label>UTC Offset</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>