force-app/main/default/objects/ucinn_ascendv2__Address__c/recordTypes/Permanent.recordType-meta.xml
<RecordType>
    <fullName>Permanent</fullName>
    <active>true</active>
    <description>Permenant</description>
    <label>Permanent</label>
</RecordType>