force-app/main/default/objects/ucinn_ascendv2__Address__c/validationRules/Required_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Country</fullName>
    <active>false</active>
    <description>Country field on address object is managed and cannot be made required validation rule to not allow it to be blank.  w-7744</description>
    <errorConditionFormula>isblank(ucinn_ascendv2__Country__c)</errorConditionFormula>
    <errorMessage>Country is required via validation rule</errorMessage>
</ValidationRule>