force-app/main/default/objects/ucinn_ascendv2__Address__c/listViews/Address_Updates_from_Today.listView-meta.xml
<ListView>
    <fullName>Address_Updates_from_Today</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Address_Line_1__c</columns>
    <columns>ucinn_ascendv2__Address_Line_2__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Data_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Address__c.Permanent</value>
    </filters>
    <label>Address Updates from Today</label>
</ListView>