force-app/main/default/objects/ucinn_ascendv2__Address__c/listViews/Jenny_s_View.listView-meta.xml
<ListView>
    <fullName>Jenny_s_View</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Address_Line_1__c</columns>
    <columns>ucinn_ascendv2__Address_Line_2__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Data_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Address__c.Permanent</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Address_Line_1__c</field>
        <operation>contains</operation>
        <value>dc</value>
    </filters>
    <label>Jenny&apos;s View</label>
</ListView>