force-app/main/default/objects/ucinn_ascendv2__Address__c/listViews/Postal_Codes_with_dashes.listView-meta.xml
<ListView>
    <fullName>Postal_Codes_with_dashes</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>ucinn_ascendv2__Postal_Code__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Address_Line_1__c</columns>
    <columns>ucinn_ascendv2__Address_Line_2__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Data_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Postal_Code__c</field>
        <operation>contains</operation>
        <value>-</value>
    </filters>
    <label>Postal Codes with dashes</label>
    <sharedTo>
        <group>Information_Management</group>
    </sharedTo>
</ListView>