force-app/main/default/objects/ucinn_ascendv2__Address__c/listViews/X4126_Ontario_St.listView-meta.xml
<ListView>
    <fullName>X4126_Ontario_St</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Address_Line_1__c</columns>
    <columns>ucinn_ascendv2__City__c</columns>
    <columns>ucinn_ascendv2__State__c</columns>
    <columns>ucinn_ascendv2__Postal_Code__c</columns>
    <columns>ucinn_ascendv2__Country__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Data_Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>External_System_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Address_Line_1__c</field>
        <operation>equals</operation>
        <value>4126 Ontario St</value>
    </filters>
    <label>4126 Ontario St</label>
</ListView>